Stop Media & Block from overflowing in Wide alignment

--- a/assets/css/base/gutenberg-blocks.scss
+++ b/assets/css/base/gutenberg-blocks.scss
@@ -25,21 +25,20 @@
 		.storefront-align-wide.storefront-full-width-content & {
 			.alignfull,
 			.alignwide {
-				width: auto;
-				max-width: 1000%;
-				padding-left: ms(2);
-				padding-right: ms(2);
 				clear: both;
 			}
 
 			.alignfull {
-				margin-left: calc(50% - 50vw);
-				margin-right: calc(50% - 50vw);
+				max-width: 1000%;
+				width: auto;
+				padding-left: ms(2);
+				padding-right: ms(2);
+				margin-left: calc(25% - 25vw);
+				margin-right: calc(25% - 25vw);
 			}
 
 			.alignwide {
-				margin-left: calc(25% - 25vw);
-				margin-right: calc(25% - 25vw);
+				//
 			}
 		}
 	}
